--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
           <table class="min-w-full divide-y divide-gray-200" id="tabelaRegistros">
             <thead class="bg-gray-50">
               <tr>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Visitante</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Documento</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Destino</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Entrada</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Saída</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ações</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Visitante</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Documento</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Placa</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Destino</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Entrada</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Saída</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Ações</th>
               </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200" id="listaRegistros">
-              <!-- registros virão do Firestore -->
+              <!-- registros serão carregados do Firestore -->
             </tbody>
           </table>
         </div>
@@ -55,6 +56,7 @@
       <h2 class="text-xl font-semibold mb-4">Novo Registro</h2>
       <input id="visitante" type="text" placeholder="Nome do visitante" class="w-full border p-2 rounded mb-3">
       <input id="documento" type="text" placeholder="Documento (CPF ou RG)" class="w-full border p-2 rounded mb-3">
+      <input id="placa" type="text" placeholder="Placa do veículo (ex: ABC1D23)" class="w-full border p-2 rounded mb-3">
       <input id="destino" type="text" placeholder="Destino (Ex: Apto 101)" class="w-full border p-2 rounded mb-3">
       <div class="flex justify-end space-x-3">
         <button id="cancelar" class="bg-gray-300 px-4 py-2 rounded">Cancelar</button>
@@ -67,11 +69,12 @@
 
   <!-- Firebase SDK -->
   <script type="module">
-    // Importar Firebase SDKs (v9 modular)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-    import { getFirestore, collection, addDoc, deleteDoc, doc, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
+    import { 
+      getFirestore, collection, addDoc, deleteDoc, updateDoc, doc, onSnapshot, serverTimestamp 
+    } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
 
-    // 🔥 CONFIGURAÇÃO DO FIREBASE
+    // 🔥 CONFIGURAÇÃO DO FIREBASE (substitua pelos seus dados)
     const firebaseConfig = {
       apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
       authDomain: "portaria-e22ae.firebaseapp.com",
@@ -82,7 +85,7 @@
       measurementId: "G-QEGQN6CTBB"
     };
 
-    // Inicializar Firebase
+    // Inicialização do Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
@@ -95,11 +98,12 @@
     btnNovo.addEventListener("click", () => modal.classList.remove("hidden"));
     btnCancelar.addEventListener("click", () => modal.classList.add("hidden"));
 
-    // Função para salvar registro
+    // ➕ Adicionar novo registro
     btnSalvar.addEventListener("click", async () => {
-      const visitante = document.getElementById("visitante").value;
-      const documento = document.getElementById("documento").value;
-      const destino = document.getElementById("destino").value;
+      const visitante = document.getElementById("visitante").value.trim();
+      const documento = document.getElementById("documento").value.trim();
+      const placa = document.getElementById("placa").value.trim();
+      const destino = document.getElementById("destino").value.trim();
 
       if (!visitante || !documento || !destino) {
         alert("Preencha todos os campos!");
@@ -109,6 +113,7 @@
       await addDoc(collection(db, "registros"), {
         visitante,
         documento,
+        placa: placa || "-",
         destino,
         entrada: new Date().toLocaleString(),
         saida: "-",
@@ -116,12 +121,10 @@
       });
 
       modal.classList.add("hidden");
-      document.getElementById("visitante").value = "";
-      document.getElementById("documento").value = "";
-      document.getElementById("destino").value = "";
+      ["visitante","documento","placa","destino"].forEach(id => document.getElementById(id).value = "");
     });
 
-    // Atualiza tabela em tempo real
+    // 🔄 Atualização em tempo real
     onSnapshot(collection(db, "registros"), (snapshot) => {
       tabela.innerHTML = "";
       snapshot.forEach((docSnap) => {
@@ -130,11 +133,17 @@
         tr.innerHTML = `
           <td class="px-6 py-4 text-sm text-gray-900">${dados.visitante}</td>
           <td class="px-6 py-4 text-sm text-gray-500">${dados.documento}</td>
+          <td class="px-6 py-4 text-sm text-gray-500">${dados.placa || "-"}</td>
           <td class="px-6 py-4 text-sm text-gray-500">${dados.destino}</td>
           <td class="px-6 py-4 text-sm text-gray-500">${dados.entrada}</td>
           <td class="px-6 py-4 text-sm text-gray-500">${dados.saida}</td>
-          <td class="px-6 py-4 text-sm text-gray-500">
-            <button class="text-red-600 hover:text-red-900" data-id="${docSnap.id}">
+          <td class="px-6 py-4 text-sm">
+            ${dados.saida === "-" 
+              ? `<button class="text-green-600 hover:text-green-900 mr-3" data-saida="${docSnap.id}">
+                  <i data-feather="log-out"></i>
+                </button>` 
+              : ""}
+            <button class="text-red-600 hover:text-red-900" data-del="${docSnap.id}">
               <i data-feather="trash-2"></i>
             </button>
           </td>
@@ -142,14 +151,25 @@
         tabela.appendChild(tr);
       });
 
-      // Recarregar ícones Feather
       feather.replace();
 
-      // Adicionar eventos de exclusão
-      document.querySelectorAll('[data-id]').forEach(btn => {
-        btn.addEventListener('click', async () => {
-          if (confirm('Deseja excluir este registro?')) {
-            await deleteDoc(doc(db, "registros", btn.dataset.id));
+      // 🕓 Registrar saída
+      document.querySelectorAll("[data-saida]").forEach(btn => {
+        btn.addEventListener("click", async () => {
+          const id = btn.dataset.saida;
+          if (confirm("Registrar saída deste visitante?")) {
+            await updateDoc(doc(db, "registros", id), {
+              saida: new Date().toLocaleString()
+            });
+          }
+        });
+      });
+
+      // ❌ Excluir registro
+      document.querySelectorAll("[data-del]").forEach(btn => {
+        btn.addEventListener("click", async () => {
+          if (confirm("Deseja excluir este registro?")) {
+            await deleteDoc(doc(db, "registros", btn.dataset.del));
           }
         });
       });
